parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> g
Rule 1     g -> linea g
Rule 2     g -> empty
Rule 3     linea -> lAbierta
Rule 4     linea -> lCerrada
Rule 5     lAbierta -> IF ( cosaBooleana ) linea
Rule 6     lAbierta -> IF ( cosaBooleana ) bloqueCerrado ELSE lAbierta
Rule 7     lAbierta -> loop lAbierta
Rule 8     bloqueCerrado -> lCerrada
Rule 9     bloqueCerrado -> { g }
Rule 10    lCerrada -> sentencia
Rule 11    lCerrada -> COMMENT
Rule 12    lCerrada -> IF ( cosaBooleana ) bloqueCerrado ELSE bloqueCerrado
Rule 13    lCerrada -> loop bloqueCerrado
Rule 14    lCerrada -> DO bloqueCerrado WHILE ( cosaBooleana ) ;
Rule 15    sentencia -> varsOps ;
Rule 16    sentencia -> func ;
Rule 17    sentencia -> varAsig ;
Rule 18    sentencia -> RETURN ;
Rule 19    sentencia -> ;
Rule 20    loop -> WHILE ( cosaBooleana )
Rule 21    loop -> FOR ( primParam ; cosaBooleana ; tercerParam )
Rule 22    cosaBooleana -> expBool
Rule 23    cosaBooleana -> valoresBool
Rule 24    primParam -> varAsig
Rule 25    primParam -> empty
Rule 26    tercerParam -> varsOps
Rule 27    tercerParam -> varAsig
Rule 28    tercerParam -> func
Rule 29    tercerParam -> empty
Rule 30    func -> funcReturn
Rule 31    func -> funcVoid
Rule 32    funcReturn -> funcInt
Rule 33    funcReturn -> funcString
Rule 34    funcReturn -> funcBool
Rule 35    funcInt -> MULTIESCALAR ( valores , valores param )
Rule 36    funcInt -> LENGTH ( valores )
Rule 37    funcString -> CAPITALIZAR ( valores )
Rule 38    funcBool -> COLINEALES ( valores , valores )
Rule 39    funcVoid -> PRINT ( valores )
Rule 40    param -> , valores
Rule 41    param -> empty
Rule 42    empty -> <empty>
Rule 43    vec -> [ elem ]
Rule 44    elem -> valores , elem
Rule 45    elem -> valores
Rule 46    valores -> eMat
Rule 47    valores -> expBool
Rule 48    valores -> funcReturn
Rule 49    valores -> reg
Rule 50    valores -> INT
Rule 51    valores -> FLOAT
Rule 52    valores -> STRING
Rule 53    valores -> BOOL
Rule 54    valores -> varYVals
Rule 55    valores -> varsOps
Rule 56    valores -> vec
Rule 57    valores -> ternarioVars
Rule 58    valores -> ( ternarioVars )
Rule 59    valores -> atributos
Rule 60    valores -> RES
Rule 61    atributos -> ID . valoresCampos
Rule 62    valoresCampos -> varYVals
Rule 63    valoresCampos -> END
Rule 64    valoresCampos -> BEGIN
Rule 65    ternarioVars -> valoresBool ? valoresTernarioVars : valoresTernarioVars
Rule 66    ternarioVars -> expBool ? valoresTernarioVars : valoresTernarioVars
Rule 67    valoresTernarioVars -> varsOps
Rule 68    valoresTernarioVars -> varYVals
Rule 69    valoresTernarioVars -> reg
Rule 70    valoresTernarioVars -> vec
Rule 71    valoresTernarioVars -> ternarioVars
Rule 72    valoresTernarioVars -> ( ternarioVars )
Rule 73    valoresTernarioVars -> valoresTernarioMat
Rule 74    valoresTernarioVars -> valoresTernarioBool
Rule 75    valoresTernarioVars -> atributos
Rule 76    valoresTernarioVars -> RES
Rule 77    varYVals -> ID
Rule 78    varYVals -> vecVal
Rule 79    varYVals -> vecVal . varYVals
Rule 80    vecVal -> ID m
Rule 81    m -> [ INT ]
Rule 82    m -> [ INT ] m
Rule 83    m -> [ varYVals ] m
Rule 84    m -> [ varYVals ]
Rule 85    m -> [ eMat ] m
Rule 86    m -> [ eMat ]
Rule 87    reg -> { campos }
Rule 88    campos -> ID : valores , campos
Rule 89    campos -> ID : valores
Rule 90    varsOps -> MENOSMENOS varYVals
Rule 91    varsOps -> MASMAS varYVals
Rule 92    varsOps -> varYVals MASMAS
Rule 93    varsOps -> varYVals MENOSMENOS
Rule 94    valoresAsig -> valores
Rule 95    varAsig -> varYVals MULEQ valoresAsig
Rule 96    varAsig -> varYVals DIVEQ valoresAsig
Rule 97    varAsig -> varYVals MASEQ valoresAsig
Rule 98    varAsig -> varYVals MENOSEQ valoresAsig
Rule 99    varAsig -> varYVals = valoresAsig
Rule 100   varAsig -> ID . ID = valoresAsig
Rule 101   valoresMat -> INT
Rule 102   valoresMat -> FLOAT
Rule 103   valoresMat -> funcInt
Rule 104   valoresMat -> varYVals
Rule 105   valoresMat -> varsOps
Rule 106   valoresMat -> STRING
Rule 107   ternarioMat -> valoresBool ? valoresTernarioMat : valoresTernarioMat
Rule 108   ternarioMat -> expBool ? valoresTernarioMat : valoresTernarioMat
Rule 109   valoresTernarioMat -> INT
Rule 110   valoresTernarioMat -> FLOAT
Rule 111   valoresTernarioMat -> funcInt
Rule 112   valoresTernarioMat -> STRING
Rule 113   valoresTernarioMat -> eMat
Rule 114   eMat -> eMat + p
Rule 115   eMat -> eMat - p
Rule 116   eMat -> valoresMat + p
Rule 117   eMat -> valoresMat - p
Rule 118   eMat -> eMat + valoresMat
Rule 119   eMat -> eMat - valoresMat
Rule 120   eMat -> valoresMat + valoresMat
Rule 121   eMat -> valoresMat - valoresMat
Rule 122   eMat -> p
Rule 123   p -> p * exp
Rule 124   p -> p / exp
Rule 125   p -> p % exp
Rule 126   p -> valoresMat * exp
Rule 127   p -> valoresMat / exp
Rule 128   p -> valoresMat % exp
Rule 129   p -> p * valoresMat
Rule 130   p -> p / valoresMat
Rule 131   p -> p % valoresMat
Rule 132   p -> valoresMat * valoresMat
Rule 133   p -> valoresMat / valoresMat
Rule 134   p -> valoresMat % valoresMat
Rule 135   p -> exp
Rule 136   exp -> exp ^ iSing
Rule 137   exp -> valoresMat ^ iSing
Rule 138   exp -> exp ^ valoresMat
Rule 139   exp -> valoresMat ^ valoresMat
Rule 140   exp -> iSing
Rule 141   iSing -> - paren
Rule 142   iSing -> + paren
Rule 143   iSing -> - valoresMat
Rule 144   iSing -> + valoresMat
Rule 145   iSing -> paren
Rule 146   paren -> ( eMat )
Rule 147   paren -> ( valoresMat )
Rule 148   valoresBool -> BOOL
Rule 149   valoresBool -> funcBool
Rule 150   valoresBool -> varYVals
Rule 151   valoresBool -> varsOps
Rule 152   ternarioBool -> valoresBool ? valoresTernarioBool : valoresTernarioBool
Rule 153   ternarioBool -> expBool ? valoresTernarioBool : valoresTernarioBool
Rule 154   valoresTernarioBool -> BOOL
Rule 155   valoresTernarioBool -> funcBool
Rule 156   valoresTernarioBool -> expBool
Rule 157   ternario -> valoresBool ? valores : valores
Rule 158   ternario -> expBool ? valores : valores
Rule 159   ternario -> ( ternario )
Rule 160   expBool -> expBool OR and
Rule 161   expBool -> valoresBool OR and
Rule 162   expBool -> expBool OR valoresBool
Rule 163   expBool -> valoresBool OR valoresBool
Rule 164   expBool -> and
Rule 165   and -> and AND eq
Rule 166   and -> valoresBool AND eq
Rule 167   and -> and AND valoresBool
Rule 168   and -> valoresBool AND valoresBool
Rule 169   and -> eq
Rule 170   eq -> eq EQEQ mayor
Rule 171   eq -> eq DISTINTO mayor
Rule 172   eq -> tCompare EQEQ mayor
Rule 173   eq -> tCompare DISTINTO mayor
Rule 174   eq -> eq EQEQ tCompare
Rule 175   eq -> eq DISTINTO tCompare
Rule 176   eq -> tCompare EQEQ tCompare
Rule 177   eq -> tCompare DISTINTO tCompare
Rule 178   eq -> mayor
Rule 179   tCompare -> eMat
Rule 180   tCompare -> varsOps
Rule 181   tCompare -> varYVals
Rule 182   tCompare -> INT
Rule 183   tCompare -> funcInt
Rule 184   tCompare -> FLOAT
Rule 185   mayor -> tCompare > tCompare
Rule 186   mayor -> menor
Rule 187   menor -> tCompare < tCompare
Rule 188   menor -> not
Rule 189   not -> NOT not
Rule 190   not -> NOT valoresBool
Rule 191   not -> parenBool
Rule 192   parenBool -> ( expBool )

Terminals, with rules where they appear

%                    : 125 128 131 134
(                    : 5 6 12 14 20 21 35 36 37 38 39 58 72 146 147 159 192
)                    : 5 6 12 14 20 21 35 36 37 38 39 58 72 146 147 159 192
*                    : 123 126 129 132
+                    : 114 116 118 120 142 144
,                    : 35 38 40 44 88
-                    : 115 117 119 121 141 143
.                    : 61 79 100
/                    : 124 127 130 133
:                    : 65 66 88 89 107 108 152 153 157 158
;                    : 14 15 16 17 18 19 21 21
<                    : 187
=                    : 99 100
>                    : 185
?                    : 65 66 107 108 152 153 157 158
AND                  : 165 166 167 168
BEGIN                : 64
BOOL                 : 53 148 154
CAPITALIZAR          : 37
COLINEALES           : 38
COMMENT              : 11
DISTINTO             : 171 173 175 177
DIVEQ                : 96
DO                   : 14
ELSE                 : 6 12
END                  : 63
EQEQ                 : 170 172 174 176
FLOAT                : 51 102 110 184
FOR                  : 21
ID                   : 61 77 80 88 89 100 100
IF                   : 5 6 12
INT                  : 50 81 82 101 109 182
LENGTH               : 36
MASEQ                : 97
MASMAS               : 91 92
MENOSEQ              : 98
MENOSMENOS           : 90 93
MULEQ                : 95
MULTIESCALAR         : 35
NOT                  : 189 190
OR                   : 160 161 162 163
PRINT                : 39
RES                  : 60 76
RETURN               : 18
STRING               : 52 106 112
WHILE                : 14 20
[                    : 43 81 82 83 84 85 86
]                    : 43 81 82 83 84 85 86
^                    : 136 137 138 139
error                : 
{                    : 9 87
}                    : 9 87

Nonterminals, with rules where they appear

and                  : 160 161 164 165 167
atributos            : 59 75
bloqueCerrado        : 6 12 12 13 14
campos               : 87 88
cosaBooleana         : 5 6 12 14 20 21
eMat                 : 46 85 86 113 114 115 118 119 146 179
elem                 : 43 44
empty                : 2 25 29 41
eq                   : 165 166 169 170 171 174 175
exp                  : 123 124 125 126 127 128 135 136 138
expBool              : 22 47 66 108 153 156 158 160 162 192
func                 : 16 28
funcBool             : 34 149 155
funcInt              : 32 103 111 183
funcReturn           : 30 48
funcString           : 33
funcVoid             : 31
g                    : 1 9 0
iSing                : 136 137 140
lAbierta             : 3 6 7
lCerrada             : 4 8
linea                : 1 5
loop                 : 7 13
m                    : 80 82 83 85
mayor                : 170 171 172 173 178
menor                : 186
not                  : 188 189
p                    : 114 115 116 117 122 123 124 125 129 130 131
param                : 35
paren                : 141 142 145
parenBool            : 191
primParam            : 21
reg                  : 49 69
sentencia            : 10
tCompare             : 172 173 174 175 176 176 177 177 185 185 187 187
tercerParam          : 21
ternario             : 159
ternarioBool         : 
ternarioMat          : 
ternarioVars         : 57 58 71 72
valores              : 35 35 36 37 38 38 39 40 44 45 88 89 94 157 157 158 158
valoresAsig          : 95 96 97 98 99 100
valoresBool          : 23 65 107 152 157 161 162 163 163 166 167 168 168 190
valoresCampos        : 61
valoresMat           : 116 117 118 119 120 120 121 121 126 127 128 129 130 131 132 132 133 133 134 134 137 138 139 139 143 144 147
valoresTernarioBool  : 74 152 152 153 153
valoresTernarioMat   : 73 107 107 108 108
valoresTernarioVars  : 65 65 66 66
varAsig              : 17 24 27
varYVals             : 54 62 68 79 83 84 90 91 92 93 95 96 97 98 99 104 150 181
varsOps              : 15 26 55 67 105 151 180
vec                  : 56 70
vecVal               : 78 79

Parsing method: LALR

state 0

    (0) S' -> . g
    (1) g -> . linea g
    (2) g -> . empty
    (3) linea -> . lAbierta
    (4) linea -> . lCerrada
    (42) empty -> .
    (5) lAbierta -> . IF ( cosaBooleana ) linea
    (6) lAbierta -> . IF ( cosaBooleana ) bloqueCerrado ELSE lAbierta
    (7) lAbierta -> . loop lAbierta
    (10) lCerrada -> . sentencia
    (11) lCerrada -> . COMMENT
    (12) lCerrada -> . IF ( cosaBooleana ) bloqueCerrado ELSE bloqueCerrado
    (13) lCerrada -> . loop bloqueCerrado
    (14) lCerrada -> . DO bloqueCerrado WHILE ( cosaBooleana ) ;
    (20) loop -> . WHILE ( cosaBooleana )
    (21) loop -> . FOR ( primParam ; cosaBooleana ; tercerParam )
    (15) sentencia -> . varsOps ;
    (16) sentencia -> . func ;
    (17) sentencia -> . varAsig ;
    (18) sentencia -> . RETURN ;
    (19) sentencia -> . ;
    (90) varsOps -> . MENOSMENOS varYVals
    (91) varsOps -> . MASMAS varYVals
    (92) varsOps -> . varYVals MASMAS
    (93) varsOps -> . varYVals MENOSMENOS
    (30) func -> . funcReturn
    (31) func -> . funcVoid
    (95) varAsig -> . varYVals MULEQ valoresAsig
    (96) varAsig -> . varYVals DIVEQ valoresAsig
    (97) varAsig -> . varYVals MASEQ valoresAsig
    (98) varAsig -> . varYVals MENOSEQ valoresAsig
    (99) varAsig -> . varYVals = valoresAsig
    (100) varAsig -> . ID . ID = valoresAsig
    (77) varYVals -> . ID
    (78) varYVals -> . vecVal
    (79) varYVals -> . vecVal . varYVals
    (32) funcReturn -> . funcInt
    (33) funcReturn -> . funcString
    (34) funcReturn -> . funcBool
    (39) funcVoid -> . PRINT ( valores )
    (80) vecVal -> . ID m
    (35) funcInt -> . MULTIESCALAR ( valores , valores param )
    (36) funcInt -> . LENGTH ( valores )
    (37) funcString -> . CAPITALIZAR ( valores )
    (38) funcBool -> . COLINEALES ( valores , valores )

    $end            reduce using rule 42 (empty -> .)
    IF              shift and go to state 12
    COMMENT         shift and go to state 9
    DO              shift and go to state 1
    WHILE           shift and go to state 6
    FOR             shift and go to state 17
    RETURN          shift and go to state 2
    ;               shift and go to state 11
    MENOSMENOS      shift and go to state 16
    MASMAS          shift and go to state 29
    ID              shift and go to state 20
    PRINT           shift and go to state 7
    MULTIESCALAR    shift and go to state 24
    LENGTH          shift and go to state 18
    CAPITALIZAR     shift and go to state 26
    COLINEALES      shift and go to state 4

    funcBool                       shift and go to state 3
    funcInt                        shift and go to state 5
    vecVal                         shift and go to state 8
    sentencia                      shift and go to state 10
    empty                          shift and go to state 13
    varsOps                        shift and go to state 14
    funcVoid                       shift and go to state 15
    func                           shift and go to state 19
    varAsig                        shift and go to state 21
    g                              shift and go to state 22
    funcString                     shift and go to state 23
    funcReturn                     shift and go to state 25
    lCerrada                       shift and go to state 27
    lAbierta                       shift and go to state 28
    loop                           shift and go to state 30
    varYVals                       shift and go to state 31
    linea                          shift and go to state 32

state 1

    (14) lCerrada -> DO . bloqueCerrado WHILE ( cosaBooleana ) ;
    (8) bloqueCerrado -> . lCerrada
    (9) bloqueCerrado -> . { g }
    (10) lCerrada -> . sentencia
    (11) lCerrada -> . COMMENT
    (12) lCerrada -> . IF ( cosaBooleana ) bloqueCerrado ELSE bloqueCerrado
    (13) lCerrada -> . loop bloqueCerrado
    (14) lCerrada -> . DO bloqueCerrado WHILE ( cosaBooleana ) ;
    (15) sentencia -> . varsOps ;
    (16) sentencia -> . func ;
    (17) sentencia -> . varAsig ;
    (18) sentencia -> . RETURN ;
    (19) sentencia -> . ;
    (20) loop -> . WHILE ( cosaBooleana )
    (21) loop -> . FOR ( primParam ; cosaBooleana ; tercerParam )
    (90) varsOps -> . MENOSMENOS varYVals
    (91) varsOps -> . MASMAS varYVals
    (92) varsOps -> . varYVals MASMAS
    (93) varsOps -> . varYVals MENOSMENOS
    (30) func -> . funcReturn
    (31) func -> . funcVoid
    (95) varAsig -> . varYVals MULEQ valoresAsig
    (96) varAsig -> . varYVals DIVEQ valoresAsig
    (97) varAsig -> . varYVals MASEQ valoresAsig
    (98) varAsig -> . varYVals MENOSEQ valoresAsig
    (99) varAsig -> . varYVals = valoresAsig
    (100) varAsig -> . ID . ID = valoresAsig
    (77) varYVals -> . ID
    (78) varYVals -> . vecVal
    (79) varYVals -> . vecVal . varYVals
    (32) funcReturn -> . funcInt
    (33) funcReturn -> . funcString
    (34) funcReturn -> . funcBool
    (39) funcVoid -> . PRINT ( valores )
    (80) vecVal -> . ID m
    (35) funcInt -> . MULTIESCALAR ( valores , valores param )
    (36) funcInt -> . LENGTH ( valores )
    (37) funcString -> . CAPITALIZAR ( valores )
    (38) funcBool -> . COLINEALES ( valores , valores )

    {               shift and go to state 36
    COMMENT         shift and go to state 9
    IF              shift and go to state 34
    DO              shift and go to state 1
    RETURN          shift and go to state 2
    ;               shift and go to state 11
    WHILE           shift and go to state 6
    FOR             shift and go to state 17
    MENOSMENOS      shift and go to state 16
    MASMAS          shift and go to state 29
    ID              shift and go to state 20
    PRINT           shift and go to state 7
    MULTIESCALAR    shift and go to state 24
    LENGTH          shift and go to state 18
    CAPITALIZAR     shift and go to state 26
    COLINEALES      shift and go to state 4

    funcBool                       shift and go to state 3
    funcInt                        shift and go to state 5
    bloqueCerrado                  shift and go to state 33
    vecVal                         shift and go to state 8
    sentencia                      shift and go to state 10
    funcVoid                       shift and go to state 15
    func                           shift and go to state 19
    varAsig                        shift and go to state 21
    funcString                     shift and go to state 23
    funcReturn                     shift and go to state 25
    lCerrada                       shift and go to state 35
    varsOps                        shift and go to state 14
    varYVals                       shift and go to state 31
    loop                           shift and go to state 37

state 2

    (18) sentencia -> RETURN . ;

    ;               shift and go to state 38


state 3

    (34) funcReturn -> funcBool .

    ;               reduce using rule 34 (funcReturn -> funcBool .)
    )               reduce using rule 34 (funcReturn -> funcBool .)


state 4

    (38) funcBool -> COLINEALES . ( valores , valores )

    (               shift and go to state 39


state 5

    (32) funcReturn -> funcInt .

    ;               reduce using rule 32 (funcReturn -> funcInt .)
    )               reduce using rule 32 (funcReturn -> funcInt .)


state 6

    (20) loop -> WHILE . ( cosaBooleana )

    (               shift and go to state 40


state 7

    (39) funcVoid -> PRINT . ( valores )

    (               shift and go to state 41


state 8

    (78) varYVals -> vecVal .
    (79) varYVals -> vecVal . . varYVals

    MASMAS          reduce using rule 78 (varYVals -> vecVal .)
    MENOSMENOS      reduce using rule 78 (varYVals -> vecVal .)
    ;               reduce using rule 78 (varYVals -> vecVal .)
    )               reduce using rule 78 (varYVals -> vecVal .)
    +               reduce using rule 78 (varYVals -> vecVal .)
    -               reduce using rule 78 (varYVals -> vecVal .)
    *               reduce using rule 78 (varYVals -> vecVal .)
    /               reduce using rule 78 (varYVals -> vecVal .)
    %               reduce using rule 78 (varYVals -> vecVal .)
    ^               reduce using rule 78 (varYVals -> vecVal .)
    OR              reduce using rule 78 (varYVals -> vecVal .)
    ?               reduce using rule 78 (varYVals -> vecVal .)
    AND             reduce using rule 78 (varYVals -> vecVal .)
    EQEQ            reduce using rule 78 (varYVals -> vecVal .)
    DISTINTO        reduce using rule 78 (varYVals -> vecVal .)
    >               reduce using rule 78 (varYVals -> vecVal .)
    <               reduce using rule 78 (varYVals -> vecVal .)
    ,               reduce using rule 78 (varYVals -> vecVal .)
    ]               reduce using rule 78 (varYVals -> vecVal .)
    :               reduce using rule 78 (varYVals -> vecVal .)
    }               reduce using rule 78 (varYVals -> vecVal .)
    MULEQ           reduce using rule 78 (varYVals -> vecVal .)
    DIVEQ           reduce using rule 78 (varYVals -> vecVal .)
    MASEQ           reduce using rule 78 (varYVals -> vecVal .)
    MENOSEQ         reduce using rule 78 (varYVals -> vecVal .)
    =               reduce using rule 78 (varYVals -> vecVal .)
    .               shift and go to state 42


state 9

    (11) lCerrada -> COMMENT .

    WHILE           reduce using rule 11 (lCerrada -> COMMENT .)
    ELSE            reduce using rule 11 (lCerrada -> COMMENT .)
    IF              reduce using rule 11 (lCerrada -> COMMENT .)
    COMMENT         reduce using rule 11 (lCerrada -> COMMENT .)
    DO              reduce using rule 11 (lCerrada -> COMMENT .)
    FOR             reduce using rule 11 (lCerrada -> COMMENT .)
    RETURN          reduce using rule 11 (lCerrada -> COMMENT .)
    ;               reduce using rule 11 (lCerrada -> COMMENT .)
    MENOSMENOS      reduce using rule 11 (lCerrada -> COMMENT .)
    MASMAS          reduce using rule 11 (lCerrada -> COMMENT .)
    ID              reduce using rule 11 (lCerrada -> COMMENT .)
    PRINT           reduce using rule 11 (lCerrada -> COMMENT .)
    MULTIESCALAR    reduce using rule 11 (lCerrada -> COMMENT .)
    LENGTH          reduce using rule 11 (lCerrada -> COMMENT .)
    CAPITALIZAR     reduce using rule 11 (lCerrada -> COMMENT .)
    COLINEALES      reduce using rule 11 (lCerrada -> COMMENT .)
    $end            reduce using rule 11 (lCerrada -> COMMENT .)
    }               reduce using rule 11 (lCerrada -> COMMENT .)


state 10

    (10) lCerrada -> sentencia .

    WHILE           reduce using rule 10 (lCerrada -> sentencia .)
    ELSE            reduce using rule 10 (lCerrada -> sentencia .)
    IF              reduce using rule 10 (lCerrada -> sentencia .)
    COMMENT         reduce using rule 10 (lCerrada -> sentencia .)
    DO              reduce using rule 10 (lCerrada -> sentencia .)
    FOR             reduce using rule 10 (lCerrada -> sentencia .)
    RETURN          reduce using rule 10 (lCerrada -> sentencia .)
    ;               reduce using rule 10 (lCerrada -> sentencia .)
    MENOSMENOS      reduce using rule 10 (lCerrada -> sentencia .)
    MASMAS          reduce using rule 10 (lCerrada -> sentencia .)
    ID              reduce using rule 10 (lCerrada -> sentencia .)
    PRINT           reduce using rule 10 (lCerrada -> sentencia .)
    MULTIESCALAR    reduce using rule 10 (lCerrada -> sentencia .)
    LENGTH          reduce using rule 10 (lCerrada -> sentencia .)
    CAPITALIZAR     reduce using rule 10 (lCerrada -> sentencia .)
    COLINEALES      reduce using rule 10 (lCerrada -> sentencia .)
    $end            reduce using rule 10 (lCerrada -> sentencia .)
    }               reduce using rule 10 (lCerrada -> sentencia .)


state 11

    (19) sentencia -> ; .

    WHILE           reduce using rule 19 (sentencia -> ; .)
    ELSE            reduce using rule 19 (sentencia -> ; .)
    IF              reduce using rule 19 (sentencia -> ; .)
    COMMENT         reduce using rule 19 (sentencia -> ; .)
    DO              reduce using rule 19 (sentencia -> ; .)
    FOR             reduce using rule 19 (sentencia -> ; .)
    RETURN          reduce using rule 19 (sentencia -> ; .)
    ;               reduce using rule 19 (sentencia -> ; .)
    MENOSMENOS      reduce using rule 19 (sentencia -> ; .)
    MASMAS          reduce using rule 19 (sentencia -> ; .)
    ID              reduce using rule 19 (sentencia -> ; .)
    PRINT           reduce using rule 19 (sentencia -> ; .)
    MULTIESCALAR    reduce using rule 19 (sentencia -> ; .)
    LENGTH          reduce using rule 19 (sentencia -> ; .)
    CAPITALIZAR     reduce using rule 19 (sentencia -> ; .)
    COLINEALES      reduce using rule 19 (sentencia -> ; .)
    $end            reduce using rule 19 (sentencia -> ; .)
    }               reduce using rule 19 (sentencia -> ; .)


state 12

    (5) lAbierta -> IF . ( cosaBooleana ) linea
    (6) lAbierta -> IF . ( cosaBooleana ) bloqueCerrado ELSE lAbierta
    (12) lCerrada -> IF . ( cosaBooleana ) bloqueCerrado ELSE bloqueCerrado

    (               shift and go to state 43


state 13

    (2) g -> empty .

    }               reduce using rule 2 (g -> empty .)
    $end            reduce using rule 2 (g -> empty .)


state 14

    (15) sentencia -> varsOps . ;

    ;               shift and go to state 44


state 15

    (31) func -> funcVoid .

    ;               reduce using rule 31 (func -> funcVoid .)
    )               reduce using rule 31 (func -> funcVoid .)


state 16

    (90) varsOps -> MENOSMENOS . varYVals
    (77) varYVals -> . ID
    (78) varYVals -> . vecVal
    (79) varYVals -> . vecVal . varYVals
    (80) vecVal -> . ID m

    ID              shift and go to state 46

    varYVals                       shift and go to state 45
    vecVal                         shift and go to state 8

state 17

    (21) loop -> FOR . ( primParam ; cosaBooleana ; tercerParam )

    (               shift and go to state 47


state 18

    (36) funcInt -> LENGTH . ( valores )

    (               shift and go to state 48


state 19

    (16) sentencia -> func . ;

    ;               shift and go to state 49


state 20

    (100) varAsig -> ID . . ID = valoresAsig
    (77) varYVals -> ID .
    (80) vecVal -> ID . m
    (81) m -> . [ INT ]
    (82) m -> . [ INT ] m
    (83) m -> . [ varYVals ] m
    (84) m -> . [ varYVals ]
    (85) m -> . [ eMat ] m
    (86) m -> . [ eMat ]

    .               shift and go to state 51
    MASMAS          reduce using rule 77 (varYVals -> ID .)
    MENOSMENOS      reduce using rule 77 (varYVals -> ID .)
    MULEQ           reduce using rule 77 (varYVals -> ID .)
    DIVEQ           reduce using rule 77 (varYVals -> ID .)
    MASEQ           reduce using rule 77 (varYVals -> ID .)
    MENOSEQ         reduce using rule 77 (varYVals -> ID .)
    =               reduce using rule 77 (varYVals -> ID .)
    [               shift and go to state 52

    m                              shift and go to state 50

state 21

    (17) sentencia -> varAsig . ;

    ;               shift and go to state 53


state 22

    (0) S' -> g .



state 23

    (33) funcReturn -> funcString .

    ;               reduce using rule 33 (funcReturn -> funcString .)
    ,               reduce using rule 33 (funcReturn -> funcString .)
    )               reduce using rule 33 (funcReturn -> funcString .)
    }               reduce using rule 33 (funcReturn -> funcString .)
    ]               reduce using rule 33 (funcReturn -> funcString .)


state 24

    (35) funcInt -> MULTIESCALAR . ( valores , valores param )

    (               shift and go to state 54


state 25

    (30) func -> funcReturn .

    ;               reduce using rule 30 (func -> funcReturn .)
    )               reduce using rule 30 (func -> funcReturn .)


state 26

    (37) funcString -> CAPITALIZAR . ( valores )

    (               shift and go to state 55


state 27

    (4) linea -> lCerrada .

    IF              reduce using rule 4 (linea -> lCerrada .)
    COMMENT         reduce using rule 4 (linea -> lCerrada .)
    DO              reduce using rule 4 (linea -> lCerrada .)
    WHILE           reduce using rule 4 (linea -> lCerrada .)
    FOR             reduce using rule 4 (linea -> lCerrada .)
    RETURN          reduce using rule 4 (linea -> lCerrada .)
    ;               reduce using rule 4 (linea -> lCerrada .)
    MENOSMENOS      reduce using rule 4 (linea -> lCerrada .)
    MASMAS          reduce using rule 4 (linea -> lCerrada .)
    ID              reduce using rule 4 (linea -> lCerrada .)
    PRINT           reduce using rule 4 (linea -> lCerrada .)
    MULTIESCALAR    reduce using rule 4 (linea -> lCerrada .)
    LENGTH          reduce using rule 4 (linea -> lCerrada .)
    CAPITALIZAR     reduce using rule 4 (linea -> lCerrada .)
    COLINEALES      reduce using rule 4 (linea -> lCerrada .)
    $end            reduce using rule 4 (linea -> lCerrada .)
    }               reduce using rule 4 (linea -> lCerrada .)


state 28

    (3) linea -> lAbierta .

    IF              reduce using rule 3 (linea -> lAbierta .)
    COMMENT         reduce using rule 3 (linea -> lAbierta .)
    DO              reduce using rule 3 (linea -> lAbierta .)
    WHILE           reduce using rule 3 (linea -> lAbierta .)
    FOR             reduce using rule 3 (linea -> lAbierta .)
    RETURN          reduce using rule 3 (linea -> lAbierta .)
    ;               reduce using rule 3 (linea -> lAbierta .)
    MENOSMENOS      reduce using rule 3 (linea -> lAbierta .)
    MASMAS          reduce using rule 3 (linea -> lAbierta .)
    ID              reduce using rule 3 (linea -> lAbierta .)
    PRINT           reduce using rule 3 (linea -> lAbierta .)
    MULTIESCALAR    reduce using rule 3 (linea -> lAbierta .)
    LENGTH          reduce using rule 3 (linea -> lAbierta .)
    CAPITALIZAR     reduce using rule 3 (linea -> lAbierta .)
    COLINEALES      reduce using rule 3 (linea -> lAbierta .)
    $end            reduce using rule 3 (linea -> lAbierta .)
    }               reduce using rule 3 (linea -> lAbierta .)


state 29

    (91) varsOps -> MASMAS . varYVals
    (77) varYVals -> . ID
    (78) varYVals -> . vecVal
    (79) varYVals -> . vecVal . varYVals
    (80) vecVal -> . ID m

    ID              shift and go to state 46

    varYVals                       shift and go to state 56
    vecVal                         shift and go to state 8

state 30

    (7) lAbierta -> loop . lAbierta
    (13) lCerrada -> loop . bloqueCerrado
    (5) lAbierta -> . IF ( cosaBooleana ) linea
    (6) lAbierta -> . IF ( cosaBooleana ) bloqueCerrado ELSE lAbierta
    (7) lAbierta -> . loop lAbierta
    (8) bloqueCerrado -> . lCerrada
    (9) bloqueCerrado -> . { g }
    (20) loop -> . WHILE ( cosaBooleana )
    (21) loop -> . FOR ( primParam ; cosaBooleana ; tercerParam )
    (10) lCerrada -> . sentencia
    (11) lCerrada -> . COMMENT
    (12) lCerrada -> . IF ( cosaBooleana ) bloqueCerrado ELSE bloqueCerrado
    (13) lCerrada -> . loop bloqueCerrado
    (14) lCerrada -> . DO bloqueCerrado WHILE ( cosaBooleana ) ;
    (15) sentencia -> . varsOps ;
    (16) sentencia -> . func ;
    (17) sentencia -> . varAsig ;
    (18) sentencia -> . RETURN ;
    (19) sentencia -> . ;
    (90) varsOps -> . MENOSMENOS varYVals
    (91) varsOps -> . MASMAS varYVals
    (92) varsOps -> . varYVals MASMAS
    (93) varsOps -> . varYVals MENOSMENOS
    (30) func -> . funcReturn
    (31) func -> . funcVoid
    (95) varAsig -> . varYVals MULEQ valoresAsig
    (96) varAsig -> . varYVals DIVEQ valoresAsig
    (97) varAsig -> . varYVals MASEQ valoresAsig
    (98) varAsig -> . varYVals MENOSEQ valoresAsig
    (99) varAsig -> . varYVals = valoresAsig
    (100) varAsig -> . ID . ID = valoresAsig
    (77) varYVals -> . ID
    (78) varYVals -> . vecVal
    (79) varYVals -> . vecVal . varYVals
    (32) funcReturn -> . funcInt
    (33) funcReturn -> . funcString
    (34) funcReturn -> . funcBool
    (39) funcVoid -> . PRINT ( valores )
    (80) vecVal -> . ID m
    (35) funcInt -> . MULTIESCALAR ( valores , valores param )
    (36) funcInt -> . LENGTH ( valores )
    (37) funcString -> . CAPITALIZAR ( valores )
    (38) funcBool -> . COLINEALES ( valores , valores )

    IF              shift and go to state 12
    {               shift and go to state 36
    WHILE           shift and go to state 6
    FOR             shift and go to state 17
    COMMENT         shift and go to state 9
    DO              shift and go to state 1
    RETURN          shift and go to state 2
    ;               shift and go to state 11
    MENOSMENOS      shift and go to state 16
    MASMAS          shift and go to state 29
    ID              shift and go to state 20
    PRINT           shift and go to state 7
    MULTIESCALAR    shift and go to state 24
    LENGTH          shift and go to state 18
    CAPITALIZAR     shift and go to state 26
    COLINEALES      shift and go to state 4
